# pathtracer

./: CMakeLists.txt  main.cpp  readme.md
.github/workflows/: cmake-multi-platform.yml
basic_types/: types.h  vec3.cpp  vec3.h
hittable/: hittable.h  hittable_list.cpp  hittable_list.h  sphere.h
hittable/geometry/: sphere.cpp  sphere.h
hittable/material/: emmisive.h  lambertian.cpp  lambertian.h  material.h  materials.h  metal.cpp  metal.h
raytracing/: camera.cpp  camera.h
source/hittable/: hittable_list.cpp  hittable_list.h
source/hittable/geometry/: sphere.cpp
source/hittable/material/: emmisive.cpp  lambertian.cpp  lambertian.h  materials.h  metal.cpp
source/images/: first_proper_light_test_4_small.ppm  less_absorb.ppm  light_test_6_small_con.ppm  test_image.ppm
source/types/: color.h  vec3.cpp  vec3.h
source/utils/: interval.h
types/: color.h  ray.h
utils/: interval.cpp  interval.h  utils.cpp  utils.h
